social media handles are almost done just need the correct links for github and linkedin, just need to make it dynamic on mobile now similar to footer but I think the issue might be in the sizing being static and not relative

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
   font-size: 100px;
 }
 
+/* contact page */
 .contact {
   background-position: center;
   background-size: cover;
@@ -39,3 +40,31 @@
   color: #fff;
   font-size: 100px;
 }
+
+.upper-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.platform-container {
+  display: flex;
+}
+
+.handle{
+  font-size: x-large;
+}
+
+.platform-clmn .fab {
+  padding-right: 8px;
+  padding-left: 50px;
+  font-size: 29px;
+}
+
+.platform-clmn .fas{
+  padding-right: 8px;
+  padding-left: 50px;
+  font-size: 30px;
+}
+/* end contact */
