--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -42,8 +42,14 @@
   margin-bottom: 0.5rem;
 }
 
-.footer-link-items a:hover {
-  color: #e9e9e9;
+.footer-link-items p {
+  color: #fff;
+  margin: 5px;
+  font-weight: bold;
+}
+
+.footer-link-items p:hover {
+  color: rgb(0, 224, 206);
   transition: 0.3s ease-out;
 }
 
@@ -57,8 +63,8 @@
 
 /* Social Icons */
 .logo-img {
-  height: 60px;
-  width: 60px;
+  height: 50px;
+  width: 50px;
 }
 
 .social-icon-link {
